Starting materials for class 2

--- a/book/refs.bib
+++ b/book/refs.bib
@@ -1,6 +1,14 @@
 ---
 ---
 
+@book{rayner2012psychology,
+  title={Psychology of reading},
+  author={Rayner, Keith and Pollatsek, Alexander and Ashby, Jane and Clifton Jr, Charles},
+  year={2012},
+  publisher={Psychology Press}
+}
+
+
 @article{leibold2015art,
   title={The art of giving online feedback.},
   author={Leibold, Nancyruth and Schwarz, Laura Marie},
