Adding more content to activities

--- a/book/misc/d23edaeb5d30f2509036f5775761ab1e.md
+++ b/book/misc/d23edaeb5d30f2509036f5775761ab1e.md
@@ -20,7 +20,7 @@
             const hashedInput = await hashPassword(input);
 
             if (hashedInput === hash) {
-                document.getElementById("message").textContent = "You got it! Let Alex know what your answer was for your reward.";
+                document.getElementById("message").textContent = "You solved it! Send Alex an email explaining your steps for validation.";
             } else {
                 document.getElementById("message").textContent = "You really should not press red buttons.";
             }
