Update drop-in discussions

--- a/book/misc/d23edaeb5d30f2509036f5775761ab1e.md
+++ b/book/misc/d23edaeb5d30f2509036f5775761ab1e.md
@@ -2,7 +2,7 @@
 <head>
     <script>
 
-        var salt = "ThisLooksInteresting";
+        var salt = "IsThisSaltCorrect?";
         const hash = "d184f2921b373367fe11cf4529291f9e4e43e50eb8bb9df134654abbf5c1172f";
 
         async function hashPassword(password) {
