--- a/book/admin/scheduling.ipynb
+++ b/book/admin/scheduling.ipynb
@@ -12,19 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Day 1: ['student17', 'student4', 'student5', 'student6']\n",
-      "Day 2: ['student20', 'student15', 'student2', 'student7']\n",
-      "Day 3: ['student14', 'student16', 'student18', 'student19']\n",
-      "Day 4: ['student3', 'student8', 'student13', 'student12']\n",
-      "Day 5: ['student10', 'student9', 'student1', 'student11']\n",
-      "Day 6: ['student21']\n"
+      "Day 1: ['student4', 'student17', 'student18', 'student9']\n",
+      "Day 2: ['student7', 'student15', 'student19', 'student21']\n",
+      "Day 3: ['student14', 'student1', 'student16', 'student13']\n",
+      "Day 4: ['student12', 'student3', 'student5', 'student11']\n",
+      "Day 5: ['student10', 'student6', 'student8', 'student2']\n",
+      "Day 6: ['student20']\n"
      ]
     }
    ],
@@ -108,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.0rc1"
   },
   "orig_nbformat": 4
  },
