--- a/book/admin/scheduling.ipynb
+++ b/book/admin/scheduling.ipynb
@@ -32,8 +32,10 @@
     "import random\n",
     "\n",
     "# List of available presentation days\n",
-    "days = [1, 2, 3, 4, 5, 6]\n",
-    "slots_per_day = [4, 4, 4, 4, 4, 1]\n",
+    "days = [\n",
+    "    \"October 18\", \"October 25\", \"November 1\", \"November 8\", \"November 15\", \"November 22\"\n",
+    "]\n",
+    "slots_per_day = [4, 4, 4, 4, 4, 2]\n",
     "\n",
     "# A CSV file where the first column is a student label, and then a\n",
     "# comma-separated ranking of dates.\n",
@@ -66,7 +68,7 @@
     "    split_line = line.split(\",\")\n",
     "    if len(split_line) > 1:  # skips blank lines\n",
     "        students.append(\n",
-    "            {\"name\": split_line[0], \"preferences\": [int(i) for i in split_line[1:]]}\n",
+    "            {\"name\": split_line[0], \"preferences\": [i for i in split_line[1:]]}\n",
     "        )\n",
     "\n",
     "# Dictionary to store the schedule\n",
@@ -88,7 +90,7 @@
     "\n",
     "# Print the schedule\n",
     "for day, info in schedule.items():\n",
-    "    print(f\"Day {day}: {info['slots']}\")\n"
+    "    print(f\"{day}: {', '.join(info['slots'])}\")\n"
    ]
   }
  ],
@@ -108,7 +110,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
