Updates to class 05

--- a/book/admin/sorting_hat.ipynb
+++ b/book/admin/sorting_hat.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(sorting-hat)=\n",
     "# Sorting hat\n",
     "\n",
     "I will use this script to be fair for assigning groups and scheduling.\n",
