fix: If preference is just a string

--- a/book/admin/sorting_hat.ipynb
+++ b/book/admin/sorting_hat.ipynb
@@ -97,6 +97,8 @@
     "class Person:\n",
     "    def __init__(self, name: str, preferences: tuple = None):\n",
     "        self.name = name\n",
+    "        if isinstance(preferences, str):\n",
+    "            preferences = (preferences,)\n",
     "        self.preferences = preferences\n",
     "\n",
     "    def __str__(self):\n",
